--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,14 @@ services:
     restart: always
     ports:
       - 6379:6379
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=redis:6379
+      - HTTP_USER=root
+      - HTTP_PASSWORD=qwerty
+    ports:
+      - 8081:8081
+    depends_on:
+      - redis
